--- a/.github/workflows/ci_ubuntu.yaml
+++ b/.github/workflows/ci_ubuntu.yaml
@@ -13,21 +13,18 @@ concurrency:
 jobs:
   ci:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     strategy:
       fail-fast: false
       matrix:
-        libt_version: ["2.0.9", "1.2.19"]
-        qbt_gui: ["GUI=ON", "GUI=OFF"]
-        qt_version: ["5.15.2", "6.2.0"]
-        exclude:
-          - libt_version: "1.2.19"
-            qt_version: "6.2.0"
+        libt_version: ["2.0.10"]
+        qbt_gui: ["GUI=OFF"]
+        qt_version: ["6.2.0"]
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
@@ -36,16 +33,8 @@ jobs:
             build-essential cmake ninja-build pkg-config \
             libboost-dev libssl-dev libxkbcommon-x11-dev zlib1g-dev
 
-      - name: Setup ccache
-        uses: Chocobo1/setup-ccache-action@v1
-        with:
-          store_cache: ${{ github.ref == 'refs/heads/master' }}
-          update_packager_index: false
-          ccache_options: |
-            max_size=2G
-
       - name: Install Qt
-        uses: jurplel/install-qt-action@v3
+        uses: jurplel/install-qt-action@v4
         with:
           version: ${{ matrix.qt_version }}
           archives: icu qtbase qtsvg qttools
@@ -69,33 +58,6 @@ jobs:
           cmake --build build
           sudo cmake --install build
 
-      # to avoid scanning 3rdparty codebases, initialize it just before building qbt
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        if: startsWith(matrix.libt_version, 2) && (matrix.qbt_gui == 'GUI=ON') && startsWith(matrix.qt_version, 6)
-        with:
-          config-file: ./.github/workflows/helper/codeql/cpp.yaml
-          languages: cpp
-
-      - name: Build qBittorrent (Qt5)
-        if: startsWith(matrix.qt_version, 5)
-        run: |
-          CXXFLAGS="$CXXFLAGS -Werror -Wno-error=deprecated-declarations" \
-          LDFLAGS="$LDFLAGS -gz" \
-          cmake \
-            -B build \
-            -G "Ninja" \
-            -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-            -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
-            -DCMAKE_INSTALL_PREFIX="/usr" \
-            -DTESTING=ON \
-            -DVERBOSE_CONFIGURE=ON \
-            -D${{ matrix.qbt_gui }}
-          cmake --build build --target qbt_update_translations
-          cmake --build build
-          cmake --build build --target check
-          DESTDIR="qbittorrent" cmake --install build
-
       - name: Build qBittorrent (Qt6)
         if: startsWith(matrix.qt_version, 6)
         run: |
@@ -115,12 +77,6 @@ jobs:
           cmake --build build
           cmake --build build --target check
           DESTDIR="qbittorrent" cmake --install build
-
-      - name: Run CodeQL analysis
-        uses: github/codeql-action/analyze@v2
-        if: startsWith(matrix.libt_version, 2) && (matrix.qbt_gui == 'GUI=ON') && startsWith(matrix.qt_version, 6)
-        with:
-          category: ${{ github.base_ref || github.ref_name }}
 
       - name: Prepare build artifacts
         run: |
@@ -158,7 +114,7 @@ jobs:
           ./linuxdeploy-x86_64.AppImage --appdir=qbittorrent --output appimage
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: qBittorrent-CI_Ubuntu-x64_${{ matrix.qbt_gui }}_libtorrent-${{ matrix.libt_version }}_Qt-${{ matrix.qt_version }}
           path: upload
